--- a/timelessArt/src/main/resources/application.properties
+++ b/timelessArt/src/main/resources/application.properties
@@ -50,4 +50,4 @@ quarkus.jwt.expiration=3600
 quarkus.smallrye-jwt.always-check-authorization=true
 quarkus.jwt.secret=wfrVY4bUIoNhqMz8Yf5k2KPh4G7iZ5Td5Nw4paOFLZA=
 
-quarkus.log.level=DEBUG
+#quarkus.log.level=DEBUG
