--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled class file
 *.class
+*$.java
 
 # Log file
 *.log
@@ -22,3 +23,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Ignoră fișierele generate automat
+*.lst
+*.json
+*.data
+*.xml
+*.txt
+
+# Ignoră directoarele și fișierele specifice build-ului
+/timelessArt/target/
