--- a/timelessArt/src/main/resources/application.properties
+++ b/timelessArt/src/main/resources/application.properties
@@ -38,7 +38,7 @@ quarkus.mailer.mock=false
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:5173
 quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
-quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
+quarkus.http.cors.methods=GET, POST, PUT, DELETE, PATCH,OPTIONS
 
 # JWT Configuration
 mp.jwt.verify.publickey.location=src/main/resources/META-INF/resources/publicKey.pem
